Fix T68414: GPencil crash after using L key and Ctrl+Z in Draw Mode

There is a segment fault because the operator was in modal but the Ctrl+Z breaks the custom data. Now, the Ctrl+Z ends the operator.